# meson-evaluation

./: README.md
cmake_sub/: README.md  meson.build
cmake_sub/src/: main.c
cmake_sub/subprojects/: libwebsockets.wrap
gtest/: README.md  meson.build
gtest/src/: fancy.c
gtest/test/: test_fancy.cc
gtest_bundled/: README.md  meson.build
gtest_bundled/include/: fancy.h
hello_world/: README.md  meson.build
hello_world/src/: main.c
install_script/: README.md  meson.build
install_script/subprojects/utils/: install_helper.sh  meson.build  utils.conf
package_sources/: meson.build
